flink.yaml
# 命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: flink
---
# jobmanager-service
apiVersion: v1
kind: Service
metadata:
  namespace: flink
  name: flink-jobmanager
spec:
  type: ClusterIP
  ports:
  - name: rpc
    port: 6123
  - name: blob-server
    port: 6124
  - name: webui
    port: 8081
  selector:
    app: flink
    component: jobmanager
---
# jobmanager-rest-service. Optional service, that exposes the jobmanager rest port as public Kubernetes node’s port.
apiVersion: v1
kind: Service
metadata:
  namespace: flink
  name: flink-jobmanager-rest
spec:
  type: NodePort
  ports:
  - name: rest
    port: 8081
    targetPort: 8081
    nodePort: 30081
  selector:
    app: flink
    component: jobmanager
---
# taskmanager-query-state-service. Optional service, that exposes the TaskManager port to access the queryable state as a public Kubernetes node’s port.
apiVersion: v1
kind: Service
metadata:
  namespace: flink
  name: flink-taskmanager-query-state
spec:
  type: NodePort
  ports:
  - name: query-state
    port: 6125
    targetPort: 6125
    nodePort: 30025
  selector:
    app: flink
    component: taskmanager
---
# jobmanager-session-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flink
  name: flink-jobmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink
      component: jobmanager
  template:
    metadata:
      labels:
        app: flink
        component: jobmanager
    spec:
      containers:
      - name: jobmanager
        image: flink:scala_2.12-java8 # The 'scala_2.12-java8' tag contains the scala_2.12-java8 released version of Flink for a specific Scala version. Do not use the 'scala_2.12-java8' tag in production as it will break your setup automatically when a new version is released.
        args: ["jobmanager"]
        ports:
        - containerPort: 6123
          name: rpc
        - containerPort: 6124
          name: blob-server
        - containerPort: 8081
          name: webui
        livenessProbe:
          tcpSocket:
            port: 6123
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
        - name: flink-config-volume
          mountPath: /opt/flink/conf
        securityContext:
          runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
      volumes:
      - name: flink-config-volume
        configMap:
          name: flink-config
          items:
          - key: flink-conf.yaml
            path: flink-conf.yaml
          - key: log4j-console.properties
            path: log4j-console.properties
---
# taskmanager-session-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flink
  name: flink-taskmanager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flink
      component: taskmanager
  template:
    metadata:
      labels:
        app: flink
        component: taskmanager
    spec:
      containers:
      - name: taskmanager
        image: flink:scala_2.12-java8 # The 'scala_2.12-java8' tag contains the scala_2.12-java8 released version of Flink for a specific Scala version. Do not use the 'scala_2.12-java8' tag in production as it will break your setup automatically when a new version is released.
        args: ["taskmanager"]
        ports:
        - containerPort: 6122
          name: rpc
        - containerPort: 6125
          name: query-state
        livenessProbe:
          tcpSocket:
            port: 6122
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
        - name: flink-config-volume
          mountPath: /opt/flink/conf/
        securityContext:
          runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
      volumes:
      - name: flink-config-volume
        configMap:
          name: flink-config
          items:
          - key: flink-conf.yaml
            path: flink-conf.yaml
          - key: log4j-console.properties
            path: log4j-console.properties
# ---
# # jobmanager-job
# apiVersion: batch/v1
# kind: Job
# metadata:
#   name: flink-jobmanager
# spec:
#   template:
#     metadata:
#       labels:
#         app: flink
#         component: jobmanager
#     spec:
#       restartPolicy: OnFailure
#       containers:
#         - name: jobmanager
#           image: flink:scala_2.12-java8 # The 'scala_2.12-java8' tag contains the scala_2.12-java8 released version of Flink for a specific Scala version. Do not use the 'scala_2.12-java8' tag in production as it will break your setup automatically when a new version is released.
#           env:
#           args: ["standalone-job", "--job-classname", "com.job.ClassName", <optional arguments>, <job arguments>] # optional arguments: ["--job-id", "<job id>", "--fromSavepoint", "/path/to/savepoint", "--allowNonRestoredState"]
#           ports:
#             - containerPort: 6123
#               name: rpc
#             - containerPort: 6124
#               name: blob-server
#             - containerPort: 8081
#               name: webui
#           livenessProbe:
#             tcpSocket:
#               port: 6123
#             initialDelaySeconds: 30
#             periodSeconds: 60
#           volumeMounts:
#             - name: flink-config-volume
#               mountPath: /opt/flink/conf
#             - name: job-artifacts-volume
#               mountPath: /opt/flink/usrlib
#           securityContext:
#             runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
#       volumes:
#         - name: flink-config-volume
#           configMap:
#             name: flink-config
#             items:
#               - key: flink-conf.yaml
#                 path: flink-conf.yaml
#               - key: log4j-console.properties
#                 path: log4j-console.properties
#         - name: job-artifacts-volume
#           hostPath:
#             path: /host/path/to/job/artifacts
# ---
# # taskmanager-job-deployment
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: flink-taskmanager
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: flink
#       component: taskmanager
#   template:
#     metadata:
#       labels:
#         app: flink
#         component: taskmanager
#     spec:
#       containers:
#       - name: taskmanager
#         image: flink:scala_2.12-java8 # The 'scala_2.12-java8' tag contains the scala_2.12-java8 released version of Flink for a specific Scala version. Do not use the 'scala_2.12-java8' tag in production as it will break your setup automatically when a new version is released.
#         env:
#         args: ["taskmanager"]
#         ports:
#         - containerPort: 6122
#           name: rpc
#         - containerPort: 6125
#           name: query-state
#         livenessProbe:
#           tcpSocket:
#             port: 6122
#           initialDelaySeconds: 30
#           periodSeconds: 60
#         volumeMounts:
#         - name: flink-config-volume
#           mountPath: /opt/flink/conf/
#         - name: job-artifacts-volume
#           mountPath: /opt/flink/usrlib
#         securityContext:
#           runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
#       volumes:
#       - name: flink-config-volume
#         configMap:
#           name: flink-config
#           items:
#           - key: flink-conf.yaml
#             path: flink-conf.yaml
#           - key: log4j-console.properties
#             path: log4j-console.properties
#       - name: job-artifacts-volume
#         hostPath:
#           path: /host/path/to/job/artifacts
