kafka.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-cluster-1 
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kafka-cluster-1 
  template:
    metadata:
      labels:
        name: kafka-cluster-1
        app: kafka-cluster-1
    spec:
      containers:
      - name: kafka-cluster-1
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-cluster-2
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kafka-cluster-2
  template:
    metadata:
      labels:
        name: kafka-cluster-2
        app: kafka-cluster-2
    spec:
      containers:
      - name: kafka-cluster-2
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-cluster-3
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kafka-cluster-3
  template:
    metadata:
      labels:
        name: kafka-cluster-3
        app: kafka-cluster-3
    spec:
      containers:
      - name: kafka-cluster-3
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster1
  namespace: kafka
  labels:
    app: kafka-cluster-1
spec:
  type: NodePort
  ports:
  - port: 9092
    name: kafka-cluster-1
    targetPort: 9092
    nodePort: 30091
    protocol: TCP
  selector:
    app: kafka-cluster-1
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster2
  namespace: kafka
  labels:
    app: kafka-cluster-2
spec:
  type: NodePort
  ports:
  - port: 9092
    name: kafka-cluster-2
    targetPort: 9092
    nodePort: 30092
    protocol: TCP
  selector:
    app: kafka-cluster-2
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster3
  namespace: kafka
  labels:
    app: kafka-cluster-3
spec:
  type: NodePort
  ports:
  - port: 9092
    name: kafka-cluster-3
    targetPort: 9092
    nodePort: 30093
    protocol: TCP
  selector:
    app: kafka-cluster-3
