consul-ingress.yaml
# 命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: consul
---
# Service，将Consul集群的端口暴露给K8S的其他Pod
apiVersion: v1
kind: Service
metadata:
  namespace: consul
  name: consul
  labels:
    name: consul
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8500
      targetPort: 8500
    - name: https
      port: 8443
      targetPort: 8443
    - name: rpc
      port: 8400
      targetPort: 8400
    - name: serflan-tcp
      protocol: "TCP"
      port: 8301
      targetPort: 8301
    - name: serflan-udp
      protocol: "UDP"
      port: 8301
      targetPort: 8301
    - name: serfwan-tcp
      protocol: "TCP"
      port: 8302
      targetPort: 8302
    - name: serfwan-udp
      protocol: "UDP"
      port: 8302
      targetPort: 8302
    - name: server
      port: 8300
      targetPort: 8300
    - name: consuldns
      port: 8600
      targetPort: 8600
  selector:
    app: consul
---
# 有状态的服务，创建3个Consul节点
# 通过k8s的DNS找到所有Consul节点的ip，然后通过Consul的命令行参数加入到Consul集群
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: consul
  name: consul
spec:
  serviceName: consul
  replicas: 3
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: consul
          image: consul:latest
          args:
            - "agent"
            - "-server"
            - "-bootstrap-expect=3"
            - "-ui"
            - "-data-dir=/consul/data"
            - "-bind=0.0.0.0"
            - "-client=0.0.0.0"
            - "-advertise=$(PODIP)"
            - "-retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local"
            - "-retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local"
            - "-retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local"
            - "-domain=cluster.local"
            - "-disable-host-node-id"
          ports:
            - containerPort: 8500
              name: ui-port
            - containerPort: 8400
              name: alt-port
            - containerPort: 53
              name: udp-port
            - containerPort: 8443
              name: https-port
            - containerPort: 8080
              name: http-port
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
---
# 将服务暴露到k8s集群外部（这个方式需要部署ingress-nginx）
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: consul
  name: ingress-consul
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul.local
      http:
        paths:
          - backend:
              serviceName: consul
              servicePort: 8500
